@@ -7,6 +7,8 @@ version 0.55:
 	* Login process shown in single window (Thanks Michael 
 	  Golden)
 	* Server side buddy lists for ICQ again  
+	* Can reorder your accounts in the account editor (Thanks
+	  Luke Schierer)
 	
 version 0.54 (03/14/2002):
 	* Compiles without GdkPixbuf again
